made path relative

--- a/unit-test/index.html
+++ b/unit-test/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Unit Testing for Stateless</title>
-		<Script src="stateless.js"></script>
+		<Script src="../stateless.js"></script>
 		<Script src="//unpkg.com/method-overload"></script>
 		<style>
 			div {
